# Rusty-slicer

./: README.md
src/: about.html  done.html  event_handler.js  index.html  main.js  progress.html  progress.js  protocol.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
